--- a/src/components/container.scss
+++ b/src/components/container.scss
@@ -14,8 +14,8 @@
 }
 
 .parent-container {
-  position: fixed;
-  inset: 0;
+  top: 5%;
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,7 +26,6 @@
 .main-container {
   display: flex;
   position: relative;
-  top: 10%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -78,7 +77,7 @@ button {
   background-color: #1a1a1a;
   border-color: #d381ff;
   margin-bottom: 0.4em;
-  width: 100%;
+  width: 95%;
   cursor: pointer;
   transition: border-color 0.25s;
 
