--- a/src/components/container.scss
+++ b/src/components/container.scss
@@ -6,7 +6,6 @@
   font-weight: 400;
   color-scheme: light dark;
   color: #d381ff;
-  background-color: black;
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
@@ -61,6 +60,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: black;
 }
 
 h1 {
@@ -77,6 +77,7 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   border-color: #d381ff;
+  color: whitesmoke;
   margin-bottom: 0.4em;
   width: 95%;
   cursor: pointer;
@@ -90,21 +91,6 @@ button {
   &:focus,
   &:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #fff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
   }
 }
 
