--- a/src/components/container.scss
+++ b/src/components/container.scss
@@ -1,3 +1,6 @@
+$main-color: red;
+$second-color: white;
+
 :root {
   text-wrap: balance;
   text-align: center;
@@ -5,7 +8,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: #d381ff;
+  color: $main-color;
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
@@ -23,7 +26,7 @@
 }
 
 .main-container {
-  top: 20em;
+  top: 13%;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -44,16 +47,6 @@ h2 {
   margin-top: 1.8em;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-
-  &:hover {
-    color: #535bf2;
-  }
-}
-
 body {
   margin: 0;
   display: flex;
@@ -68,7 +61,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+a {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -82,10 +75,12 @@ button {
   width: 95%;
   cursor: pointer;
   transition: border-color 0.25s;
+  text-decoration: inherit;
+  font-weight: 500;
 
   &:hover {
-    border-color: #646cff;
-    background-color: #d381ff;
+    border-color: $second-color;
+    background-color: $main-color;
   }
 
   &:focus,
@@ -104,12 +99,12 @@ button {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #d381ff;
+  background-color: $main-color;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #c510ff;
+  background-color: $main-color;
 }
 
 ::-webkit-scrollbar-track {
