--- a/src/components/container.scss
+++ b/src/components/container.scss
@@ -15,23 +15,15 @@ $second-color: white;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.parent-container {
-  inset: 0;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: scroll;
-  overflow-x: hidden;
-}
-
 .main-container {
-  top: 13%;
   display: flex;
-  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  top: 13%; 
+  right: 50%;
+  transform: translate(50%, 0);
 }
 
 h1,
@@ -63,13 +55,13 @@ h1 {
 
 a {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 0.5px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 150%;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  border-color: #d381ff;
+  border-color: tomato;
   color: whitesmoke;
   margin-bottom: 0.4em;
   width: 95%;
